prima riga di carte

--- a/index.html
+++ b/index.html
@@ -2,15 +2,38 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>memory</title>
   </head>
   <body>
+    <header>
+
+    </header>
+
     <div class="contenitore">
 
       <div class="quadrato">
-        <img src="img/air_balloon.png" alt="balloon">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
         <h5>figurina</h5>
       </div>
     </div>
+
+    <footer>
+    </footer>
   </body>
 </html>
