--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <title>memory</title>
   </head>
   <body>
@@ -31,6 +33,47 @@
         <img class="figurina"src="img/air_balloon.png" alt="balloon">
         <h5>figurina</h5>
       </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
     </div>
 
     <footer>
