--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>memory</title>
   </head>
   <body>
-    <header>
 
+    <header>
+      <h1 class="title">MEMORY GAME</h1>
     </header>
 
     <div class="contenitore">
-
       <div class="quadrato">
         <img class="figurina"src="img/air_balloon.png" alt="balloon">
         <h5>figurina</h5>
