--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <img class="figurina"src="img/bicycle.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/cruise.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/submarine.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/tractor.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/tram.png" alt="balloon">
+        <h5>figurina</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina"src="img/bicycle.png" alt="balloon">
         <h5>figurina</h5>
       </div>
 
@@ -30,47 +55,22 @@
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <img class="figurina"src="img/submarine.png" alt="balloon">
         <h5>figurina</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <img class="figurina"src="img/tram.png" alt="balloon">
         <h5>figurina</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <img class="figurina"src="img/cruise.png" alt="balloon">
         <h5>figurina</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
-        <h5>figurina</h5>
-      </div>
-
-      <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
-        <h5>figurina</h5>
-      </div>
-
-      <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
-        <h5>figurina</h5>
-      </div>
-
-      <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
-        <h5>figurina</h5>
-      </div>
-
-      <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
-        <h5>figurina</h5>
-      </div>
-
-      <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
+        <img class="figurina"src="img/tractor.png" alt="balloon">
         <h5>figurina</h5>
       </div>
 
