--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </header>
 
     <div class="contenitore">
-      <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="balloon">
-        <h5>figurina</h5>
+
+      <div class="quadrato-fisso">
+        <h5 class="balloon">Air balloon</h5>
       </div>
 
       <div class="quadrato">
