--- a/index.html
+++ b/index.html
@@ -16,61 +16,62 @@
     <div class="contenitore">
 
       <div class="quadrato">
-        <img class="figurina"src="img/bicycle.png" alt="">
+        <img class="figurina" src="img/bicycle.png" alt="">
         <h5>Bicycle</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/cruise.png" alt="">
+        <img class="figurina" src="img/cruise.png" alt="">
         <h5>Cruise</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/submarine.png" alt="">
+        <img class="figurina" src="img/submarine.png" alt="">
         <h5>submarine</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/tractor.png" alt="">
+        <img class="figurina" src="img/tractor.png" alt="">
         <h5>Tractor</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/tram.png" alt="">
+        <img class="figurina" src="img/tram.png" alt="">
         <h5>tram</h5>
       </div>
 
-      <div class="quadrato-fisso">
-        <h5 class="balloon">Air balloon</h5>
-      </div>
-
-      <div class="quadrato">
-        <img class="figurina"src="img/bicycle.png" alt="">
-        <h5>bicycle</h5>
-      </div>
-
-      <div class="quadrato">
-        <img class="figurina"src="img/air_balloon.png" alt="">
+      <div class="quadrato fisso">
+        <img class="figurina" src="img/air_balloon.png" alt="">
         <h5>Air Balloon</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/submarine.png" alt="">
+        <img class="figurina" src="img/bicycle.png" alt="">
+        <h5>bicycle</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina" src="img/air_balloon.png" alt="">
+        <h5>Air Balloon</h5>
+      </div>
+
+      <div class="quadrato">
+        <img class="figurina" src="img/submarine.png" alt="">
         <h5>Submarine</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/tram.png" alt="">
+        <img class="figurina" src="img/tram.png" alt="">
         <h5>Tram</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/cruise.png" alt="">
+        <img class="figurina" src="img/cruise.png" alt="">
         <h5>Cruise</h5>
       </div>
 
       <div class="quadrato">
-        <img class="figurina"src="img/tractor.png" alt="">
+        <img class="figurina" src="img/tractor.png" alt="">
         <h5>Tractor</h5>
       </div>
 
